[tool.poetry]
name = "doge-api"
version = "0.1.0"
description = ""
authors = ["Daniel Banasik <daniel.banasik1@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.7"
fastapi = "^0.115.4"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
uvicorn = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
