[tool.poetry]
name = "doge-api"
version = "0.1.0"
description = ""
authors = ["Daniel Banasik <daniel.banasik1@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.7"
fastapi = "^0.115.4"
flake8 = "^7.1.1"
mypy = "^1.13.0"
polars = "^1.12.0"
pre-commit = "^4.0.1"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
SQLAlchemy = "^2.0.36"
types-requests = "^2.32.0.20241016"
uvicorn = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
